Lzip's output piped into Tar in book's quick start
Antonio Diaz Diaz kindly noted that for systems where Tar doesn't recognize
`.tar.lz', we can use a pipe instead of two commands. So a footnote was
added to the "Quick start" section of the book to remind the users of this
method. In the main text, the two command format is kept because it is more
clear to the un-experienced eyes.

An experienced person in the Unix-way will never even open this section of
the book, they will have their own methods to uncompress and un-pack a
tarball. But the footnote can be a good reminder for a person who is
reading the manual a second time (and has gained some prior experience in
Unix).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -735,7 +735,12 @@ Let's assume the downloaded tarball is in the @file{TOPGNUASTRO}
 directory. The first two commands below can be used to decompress the
 source. If you download @file{tar.lz} and your Tar implementation doesn't
 recognize Lzip (the second command fails), run the third and fourth
-lines. Note that lines starting with @code{##} don't need to be typed.
+lines@footnote{In case Tar doesn't directly uncompress your @file{.tar.lz}
+tarball, you can merge the separate calls to Lzip and Tar (shown in the
+main body of text) into one command by directly piping the output of Lzip
+into Tar with a command like this: @command{$ lzip -cd gnuastro-0.5.tar.lz
+| tar -xf -}}. Note that lines starting with @code{##} don't need to be
+typed.
 
 @example
 ## Go into the download directory.
