Match program added to info contents for access with Info
When creating the new Match program, an Info entry wasn't added at the
start of the `.texi' file! One is added now.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -81,6 +81,9 @@ License''.
 * MakeProfiles: (gnuastro)MakeProfiles. Make mock profiles.
 * astmkprof: (gnuastro)Invoking astmkprof. Options to MakeProfiles.
 
+* Match: (gnuastro)Match. Match two separate catalogs.
+* astmatch: (gnuastro)Invoking astmatch. Options to Match.
+
 * NoiseChisel: (gnuastro)NoiseChisel. Detect signal in noise.
 * astnoisechisel: (gnuastro)Invoking astnoisechisel. Options to NoiseChisel.
 
