Correction in Sience and its tools section of book
A minor (one word) correction was made to the ending of the "Science and
its tools" section of the book: "known" was changed to "existing". This was
because "known" could be interpretted as "true": implying "know"ing
something that is "absolutely true". This is contrary to the spirit of this
section, or science as defined by Popper or Kuhn, were the assumption of an
"absolute truth" is not necessary. "existing" was a good alternative to fix
this issue and does not cause the confusion above.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -956,7 +956,7 @@ looked for in the sixth place of decimals.
 If scientists are considered to be more than mere ``puzzle
 solvers''@footnote{Thomas S. Kuhn. @emph{The Structure of Scientific
 Revolutions}, University of Chicago Press, 1962.} (simply adding to
-the decimals of known values or observing a feature in 10, 100, or
+the decimals of existing values or observing a feature in 10, 100, or
 100000 more galaxies or stars, as Kelvin and Michelson clearly
 believed), they cannot just passively sit back and uncritically repeat
 the previous (observational or theoretical) methods/tools on new
