NEWS file and library soname updated for next release
The NEWS file hadn't been prepared to host updates/changes since the 0.5
release. So a title and empty sections for the next release is now ready to
host all the different major updates.

Also in preparation for the next release, the library's major soname
version was updated to 4. In time many changes will certainly be made to
the library before the next release.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,24 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 
+* Noteworthy changes in release A.A (library 4.0.0) (YYYY-MM-DD) [stable]
+
+** New features
+
+** Removed features
+
+** Changed features
+
+** Bug fixes
+
+  Many unused result warnings for asprintf in some compilers (bug #52979).
+
+  Configure time CPPFLAGS and LDFLAGS don't pass to BuildProgram (bug #53122).
+
+
+
+
+
 * Noteworthy changes in release 0.5 (library 3.0.0) (2017-12-22) [stable]
 
 ** New features
