Known issues solution to LD_LIBRARY_PATH re-written in book
This solution was slightly out-dated (more than one test will pass and many
will be skipped). It also wasn't generic enough (describing the possibility
of other installation directories). So it was re-written to adapt to what
happens now.

Also instead of the script writing the `export ...' command into
`~/.bashrc', the line is now written and the user is requested to add it
them selves (how ever they like). This is more clear and informative.

--- a/THANKS
+++ b/THANKS
@@ -47,6 +47,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Ole Streicher                        olebole@debian.org
     Alfred M. Szmidt                     ams@gnu.org
     Michel Tallon                        mtallon@obs.univ-lyon1.fr
+    Juan C. Tello                        jtello@iaa.es
     Éric Thiébaut                        eric.thiebaut@univ-lyon1.fr
     Ignacio Trujillo                     trujillo@iac.es
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
