--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  Statistics: the new `--manualbinrange' allows the bins in histograms or
+  cumulative frequency plots to be set outside the minimum or maximum
+  values of the dataset.
+
 ** Removed features
 
 ** Changed features
